<resources>
    <string name="app_name">SportsManager</string>
    <string name="team_home">Team Home</string>
    <string name="players">Roster</string>
    <string name="lineup">Lineup</string>
    <string name="games">Games</string>
    <string name="title_activity_login">Sports Manager</string>
    <string name="login">Login</string>
    <string name="create_new">Create New Team</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="player_avatar">Player Avatar</string>
    <string name="name">Name</string>
    <string name="phone">Phone #</string>

    <string name="new_team">New Team</string>
    <string name="team_name">Team Name</string>
    <string name="opponent_name">Opponent Name</string>
    <string name="date">Select Date</string>


    <!-- roster -->
    <string name="player_image">player image</string>
    <string name="remove">Remove</string>

    <!-- game nav -->
    <string name="game_separator">vs.</string>
    <string name="add_game_btn_text">Add Game</string>
    <string name="default_games_msg">Your team has no upcoming games.</string>

    <!-- login/register -->
    <string name="login_title">LOGIN</string>
    <string name="register_btn_text">Register</string>
    <string name="register_title_text">REGISTER</string>
    <string name="login_btn_text">Login</string>
    <string name="username_hint">enter email</string>
    <string name="password_hint">enter password</string>
    <string name="game_location">Location</string>
    <string name="opponent_team">Opponent Team</string>
    <string name="home_radio_btn">Home</string>
    <string name="away_radio_btn">Away</string>
    <string name="edit">Edit</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="inches">inches</string>
    <string name="feet">feet</string>
    <string name="lbs">lbs</string>
    <string name="number_hint">#00</string>
    <string name="add">Add</string>
    <string name="roster_default_text">You currently have no players on your roster.</string>
    <string name="preferred_position">Preferred Position:</string>
    <string name="notes">Notes</string>
    <string name="back_to_login">Back to Login</string>
    <string-array name="array_0to11">
        <item>0</item><item>1</item><item>2</item>
        <item>3</item><item>4</item><item>5</item>
        <item>6</item><item>7</item><item>8</item>
        <item>9</item><item>10</item><item>11</item>
    </string-array>
    <string-array name="array_4to7">
        <item>4</item><item>5</item>
        <item>6</item><item>7</item>
    </string-array>
    <string-array name="spin_Players">
        <item> </item><item>Wajih</item><item>Wes</item>
        <item>Jose</item>
    </string-array>

</resources>
