<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewGameDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:textSize="24sp"
            android:text="Add Game" />

        <EditText
            android:id="@+id/opponent_name_input"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/opponent_team" />

        <EditText
            android:id="@+id/game_location_input"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/game_location" />

        <DatePicker
            android:id="@+id/game_date_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" />

        <TimePicker
            android:id="@+id/game_time_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" />

        <RadioGroup
            android:id="@+id/away_or_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" >

            <RadioButton
                android:id="@+id/homeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_radio_btn"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/awayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/away_radio_btn"/>

        </RadioGroup>

    </LinearLayout>
</ScrollView>